self destruct => self-destruct

--- a/views/create.erb
+++ b/views/create.erb
@@ -12,7 +12,7 @@
     <div class="row">
       <ul>
         <li><p>we'll ask you for a password after you hit submit</p></li>
-        <li><p>the pad will self destruct 7 days from now</p></li>
+        <li><p>the pad will self-destruct 7 days from now</p></li>
         <li><p>you'll get a link to share when you're done</p></li>
       </ul>
     </div>
