--- a/views/index.erb
+++ b/views/index.erb
@@ -43,7 +43,7 @@
   </div>
   <div class="span3">
     <i class="icon-trash"></i>
-    <h3>Self Destructs</h3>
+    <h3>Self-Destructs</h3>
     <p>The pad is automatically destroyed after 7 days.</p>
   </div>
 </div>
