--- a/views/index.erb
+++ b/views/index.erb
@@ -66,7 +66,7 @@
     <img src="/images/person2.png">
     <blockquote>
       <p>"Finally something I can use"</p>
-      <small>Smushi Mushi</small>
+      <small>Sebastian Eide</small>
     </blockquote>
   </div>
   <div class="span3">
