--- a/views/css/pad.scss
+++ b/views/css/pad.scss
@@ -4,6 +4,9 @@
     height: 300px;
     border-radius: 5px;
     margin-bottom: 20px;
+    background-color: white;
+    cursor: auto;
+    border-color: #ccc;
   }
   p {
     margin-top: 20px;
