--- a/views/pad.erb
+++ b/views/pad.erb
@@ -2,7 +2,7 @@
   <div class="span2"><p>The pad is here...</p></div>
   <div class="span6 offset1">
     <div class="row">
-      <textarea class="input-xlarge"></textarea>
+      <textarea class="input-xlarge" readonly></textarea>
     </div>
   </div>
 </div>
