--- a/views/index.erb
+++ b/views/index.erb
@@ -51,8 +51,8 @@
   <div class="span3">
     <img src="/images/person3.png">
     <blockquote>
-      <p>"I love it"</p>
-      <small>Masha Tasha</small>
+      <p>"Now secrets are still secrets"</p>
+      <small>Rozelle Kane</small>
     </blockquote>
   </div>
   <div class="span3">
@@ -72,7 +72,7 @@
   <div class="span3">
     <img src="/images/person3.png">
     <blockquote>
-      <p>"I really love it"</p>
+      <p>"Now I can keep my affair secret"</p>
       <small>Masha Tasha</small>
     </blockquote>
   </div>
