feedback when submitting

--- a/views/create.erb
+++ b/views/create.erb
@@ -30,7 +30,7 @@
       <h3 class="span3">Choose your password</h3>
       <!-- TODO: add note that your colleague will have to know this password -->
       <input autofocus class="span2" type="password" id="password">
-      <input type="button" data-dismiss="modal" class="btn btn-warning" id="passwordDone" value="Done">
+      <input type="button" class="btn btn-warning" id="passwordDone" value="Done">
     </div>
   </div>
 </div>
