--- a/views/pad.erb
+++ b/views/pad.erb
@@ -18,7 +18,7 @@
     <div class="row">
       <h3 class="span2 offset1">Enter password</h3>
       <input autofocus class="span2" type="password" id="password">
-      <input type="button" data-dismiss="modal" class="btn btn-warning" id="passwordDone" value="Done">
+      <input type="button" class="btn btn-warning" id="passwordDone" value="Done">
     </div>
   </div>
 </div>
