--- a/views/create.erb
+++ b/views/create.erb
@@ -19,7 +19,7 @@
   </div>
 </div>
 <script>
-  $(document).ready(function() { new window.Create(); });
+  $(document).ready(function() { init(); });
 </script>
 
 <!-- modal dialog for password, only shown after click -->
