--- a/views/index.erb
+++ b/views/index.erb
@@ -70,10 +70,10 @@
     </blockquote>
   </div>
   <div class="span3">
-    <img src="/images/person3.png">
+    <img src="/images/person4.png">
     <blockquote>
       <p>"Now I can keep my affair secret"</p>
-      <small>Masha Tasha</small>
+      <small>Hilla Zino</small>
     </blockquote>
   </div>
 </div>
