--- a/views/index.erb
+++ b/views/index.erb
@@ -32,17 +32,17 @@
 </div>
 <div class="row details">
   <div class="span3 offset1">
-    <i class="icon-lock"></i>
+    <img src="/images/lock.png">
     <h3>Secure</h3>
     <p>The text you type is encrypted using the password of your choice.</p>
   </div>
   <div class="span3">
-    <i class="icon-user"></i>
+    <img src="/images/people.png">
     <h3>Share</h3>
     <p>You get a link to share the pad with colleagues and friends.</p>
   </div>
   <div class="span3">
-    <i class="icon-trash"></i>
+    <img src="/images/selfdestructs.png">
     <h3>Self-Destructs</h3>
     <p>The pad is automatically destroyed after 7 days.</p>
   </div>
