--- a/views/css/index.scss
+++ b/views/css/index.scss
@@ -27,9 +27,9 @@
   }
 
   .details > div {
-    > i {
+    > i, > img {
       float: left;
-      margin-top: 20px;
+      margin: 20px 20px 20px 0;
     }
 
     > h3 {
