--- a/views/base.erb
+++ b/views/base.erb
@@ -42,8 +42,8 @@
     </div>
     <div class="container footer">
       <div class="row">
-        <div class="span1 offset4"><a href="#">About</a></div>
-        <div class="span1"><a href="#">Contact</a></div>
+        <div class="span1 offset4"><a href="http://www.twitter.com/hellonoam">About</a></div>
+        <div class="span1"><a href="mailto:hellonoam@gmail.com">Contact</a></div>
         <div class="span1"><a href="#">Like</a></div>
         <div class="span1"><a href="#">Tweet</a></div>
         <div class="span1"><a href="#">G+</a></div>
