--- a/views/create.erb
+++ b/views/create.erb
@@ -28,7 +28,7 @@
     <a class="close" data-dismiss="modal">×</a>
     <div class="row">
       <h3 class="span3">Choose your password</h3>
-      <!-- TODO: add note that your colleague will have to know this password -->
+      <!-- TODO: consider adding note that your colleague will have to know this password -->
       <input autofocus class="span2" type="password" id="password">
       <input type="button" class="btn btn-warning" id="passwordDone" value="Done">
     </div>
