--- a/views/index.erb
+++ b/views/index.erb
@@ -65,7 +65,7 @@
   <div class="span3">
     <img src="/images/person2.png">
     <blockquote>
-      <p>"Finally something I can use"</p>
+      <p>"Brilliantly simple"</p>
       <small>Sebastian Eide</small>
     </blockquote>
   </div>
