better keep in touch js

--- a/views/base.erb
+++ b/views/base.erb
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <a href="#signupModal" data-toggle="modal" id="signup" class="btn btn-primary">Signup</a>
+        <input type="button" id="signup" class="btn btn-primary" value="Signup">
       </div>
     </div>
   </body>
