autofocus on email when keeping in touch

--- a/views/base.erb
+++ b/views/base.erb
@@ -62,7 +62,7 @@
           let you know when the features are out. We'll never spam you, promise</p>
         <div class="row">
             <h3 class="span2 offset1">your email:</h3>
-            <input class="span2" type="email">
+            <input class="span2" autofocus type="email">
         </div>
       </div>
       <div class="modal-footer">
