--- a/views/index.erb
+++ b/views/index.erb
@@ -59,7 +59,7 @@
     <img src="/images/person1.png">
     <blockquote>
       <p>"it's amazingly secure"</p>
-      <small>Noam Szpiro</small>
+      <small>Eugene Feygelson</small>
     </blockquote>
   </div>
   <div class="span3">
