--- a/views/index.erb
+++ b/views/index.erb
@@ -58,7 +58,7 @@
   <div class="span3">
     <img src="/images/person1.png">
     <blockquote>
-      <p>"it's amazingly secure"</p>
+      <p>"Finally I can share what really happened"</p>
       <small>Eugene Feygelson</small>
     </blockquote>
   </div>
