--- a/views/create.erb
+++ b/views/create.erb
@@ -1,7 +1,11 @@
 <div class="row">
-  <div class="span2"><p>Your pad is ready...</p></div>
+  <div class="span2 ready"><p>Your pad is ready...</p></div>
   <div class="span6 offset1">
     <div class="row">
+      <div>
+        <input type="button" id="filesButton" class="btn btn-info disabled" value="Add Files to Pad">
+        <input type="button" id="securityButton"class="btn btn-info disabled" value="More Securiry Options">
+      </div>
       <textarea autofocus placeholder="your secret message" class="input-xlarge"></textarea>
       <div>
         <input type="button" id="submitPad" class="btn btn-warning" value="submit">
