--- a/views/css/create.scss
+++ b/views/css/create.scss
@@ -4,6 +4,10 @@
     height: 300px;
     border-radius: 5px;
     margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  .points, .ready {
+    margin-top: 40px;
   }
   p {
     margin-top: 20px;
