--- a/views/base.erb
+++ b/views/base.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <!-- loads jquery from google -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
+    <!-- loads jquery locally if you're working offilne -->
+    <script src="/js/jquery.js"></script>
 
     <!--  begin TWITTER bootstrap -->
     <script src="/twitter_bootstrap/js/bootstrap.min.js"></script>
@@ -10,8 +13,11 @@
 
     <link rel="stylesheet" type="text/css" href="/css/common.scss"/>
     <link rel="stylesheet" type="text/css" href="/css/<%= template %>.scss"/>
+
     <script src="/js/common.coffee"></script>
     <script src="/js/<%= template %>.coffee"></script>
+    <%= script_tags %>
+    <!-- Google analytics -->
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -23,8 +29,8 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
-
     </script>
+    <!-- END Google analytics -->
   </head>
   <body data-twttr-rendered="true">
     <div class="navbar navbar-fixed-top">
