file uploading capabilities

--- a/views/create.erb
+++ b/views/create.erb
@@ -3,7 +3,8 @@
   <div class="span6 offset1">
     <div class="row">
       <div>
-        <input type="button" id="filesButton" class="btn btn-info disabled" value="Add Files to Pad">
+        <input type="file" id="filesButton">
+        <input type="button" id="filesButtonOverlay" class="btn btn-info disabled" value="Add Files to Pad">
         <input type="button" id="securityButton"class="btn btn-info disabled" value="More Securiry Options">
       </div>
       <textarea autofocus placeholder="your secret message" class="input-xlarge"></textarea>
