saving files and allowing for download after authentication

--- a/views/css/pad.scss
+++ b/views/css/pad.scss
@@ -8,10 +8,13 @@
     cursor: auto;
     border-color: #ccc;
   }
+  .fileslinks {
+    margin-bottom: 20px;
+  }
   p {
-    margin-top: 20px;
     font-size: 18px;
     font-weight: 200;
+    margin-top: 20px;
     line-height: 27px;
   }
   #passwordModal {
