--- a/views/pad.erb
+++ b/views/pad.erb
@@ -5,6 +5,9 @@
       <textarea class="input-xlarge" readonly></textarea>
     </div>
   </div>
+  <div class="span3">
+    <div class="row fileslinks"></div>
+  </div>
 </div>
 
 <!-- modal dialog for password shown on load -->
