--- a/views/create.erb
+++ b/views/create.erb
@@ -7,6 +7,7 @@
         <input type="button" id="filesButtonOverlay" class="btn btn-info" value="Add Files to Pad">
         <input type="button" id="securityButton"class="btn btn-info disabled" value="More Securiry Options">
       </div>
+      <div class="fileslinks"></div>
       <textarea autofocus placeholder="your secret message" class="input-xlarge"></textarea>
       <div>
         <input type="button" id="submitPad" class="btn btn-warning" value="submit">
