--- a/views/link.erb
+++ b/views/link.erb
@@ -3,5 +3,6 @@
 </div>
 <div class="row">
   <p class="span2 offset2">Here is your link: </p>
-  <p class="span8"><a href="<%= pad_link%>"><%= pad_link %></a></p>
+  <p class="span5"><a href="<%= pad_link%>"><%= pad_link %></a></p>
+  <%= clippy(pad_link) %>
 </div>
