--- a/views/create.erb
+++ b/views/create.erb
@@ -1,5 +1,11 @@
 <div class="row">
-  <div class="span2 ready"><p>Your pad is ready...</p></div>
+  <div class="span2 status">
+    <p>Your pad is ready...</p>
+    <h4></h4>
+    <div class="progress progress-striped active hide">
+      <div class="bar" style="width: 0%;"></div>
+    </div>
+  </div>
   <div class="span6 offset1">
     <div class="row">
       <div>
