--- a/views/css/create.scss
+++ b/views/css/create.scss
@@ -12,7 +12,11 @@
     margin-bottom: 20px;
     margin-top: 20px;
   }
-  .points, .ready {
+  .status h4 {
+    margin: 10px auto;
+    width: 30px;
+  }
+  .points, .status {
     margin-top: 40px;
   }
   p {
