--- a/views/css/create.scss
+++ b/views/css/create.scss
@@ -5,6 +5,11 @@
     position: absolute;
     width: 119px;
   }
+  .overlimitMessage {
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+  }
   textarea {
     width: 450px;
     height: 300px;
