added limit to file count

--- a/views/create.erb
+++ b/views/create.erb
@@ -18,9 +18,15 @@
       <div class="fileslinks"></div>
     </div>
     <div class="row">
-      <div class="overlimitMessage alert alert-error hide">
+      <div class="overSizeLimitMessage oversize alert alert-error hide">
         <a href="#" class="close">×</a>
         You chose a file over the 20MB limit, it will not be uploaded
+      </div>
+    </div>
+    <div class="row">
+      <div class="overCountLimitMessage oversize alert alert-error hide">
+        <a href="#" class="close">×</a>
+        You can only upload 4 files or less.
       </div>
     </div>
     <div class="row">
