--- a/views/css/create.scss
+++ b/views/css/create.scss
@@ -5,7 +5,7 @@
     position: absolute;
     width: 119px;
   }
-  .overlimitMessage {
+  .oversize {
     margin-right: 20px;
     margin-top: 10px;
     margin-bottom: 0px;
