better feedback text

--- a/views/create.erb
+++ b/views/create.erb
@@ -20,13 +20,13 @@
     <div class="row">
       <div class="overSizeLimitMessage oversize alert alert-error hide">
         <a href="#" class="close">×</a>
-        You chose a file over the 20MB limit, it will not be uploaded
+        You chose a file over the 20MB limit, it will not upload.
       </div>
     </div>
     <div class="row">
       <div class="overCountLimitMessage oversize alert alert-error hide">
         <a href="#" class="close">×</a>
-        You can only upload 4 files or less.
+        You can only upload up to 4 files.
       </div>
     </div>
     <div class="row">
