disabling certain fields when choosing some options

--- a/views/create.erb
+++ b/views/create.erb
@@ -22,7 +22,7 @@
               <label class="control-label">Encryption method:</label>
               <div class="controls">
                 <label class="checkbox">
-                  <input type="checkbox" name="no encryption"> Do not encrypt (no password)
+                  <input type="checkbox" name="noEncryption"> Do not encrypt
                 </label>
                 <label class="radio">
                   <input type="radio" name="encryptMethod" value="serverSide" checked> Server-Side
