capability for pad with no password

--- a/views/base.erb
+++ b/views/base.erb
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="container main">
-      <%= erb template %>
+      <%= erb template, :locals => locals %>
     </div>
     <div class="container footer">
       <div class="row">
