--- a/views/pad.erb
+++ b/views/pad.erb
@@ -11,7 +11,7 @@
 </div>
 
 <!-- modal dialog for password shown on load -->
-<div class="modal hide" id="passwordModal">
+<div class="modal hide" data-noPassword="<%= no_password %>" id="passwordModal">
   <div class="modal-body">
     <div class="row">
       <h3 class="span2 offset1">Enter password</h3>
