initial support for allow reader to destroy

--- a/views/pad.erb
+++ b/views/pad.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row hashId" data-hashId="<%= hash_id %>">
   <div class="span2"><p>The pad is here...</p></div>
   <div class="span6 offset1">
     <div class="row">
@@ -7,6 +7,9 @@
   </div>
   <div class="span3">
     <div class="row fileslinks"></div>
+    <div class="row hide deletePad">
+      <input type="button" class="btn btn-warning" id="deletePad" value="Delete This Pad">
+    </div>
   </div>
 </div>
 
