fixed bug when removing files that have long names and moves close for alerts code to common.coffee

--- a/views/pad.erb
+++ b/views/pad.erb
@@ -9,6 +9,14 @@
     <div class="row fileslinks"></div>
     <div class="row hide deletePad">
       <input type="button" class="btn btn-warning" id="deletePad" value="Delete This Pad">
+      <div class="deletePadFailed alert alert-error hide">
+        <a href="#" class="close">×</a>
+        Deleting pad failed, please try again later
+      </div>
+      <div class="deletePadSuccess info alert-info hide">
+        <a href="#" class="close">×</a>
+        Pad deleted
+      </div>
     </div>
   </div>
 </div>
