feedback for deleting pad

--- a/views/css/pad.scss
+++ b/views/css/pad.scss
@@ -8,6 +8,9 @@
     cursor: auto;
     border-color: #ccc;
   }
+  .deletePad .alert {
+    margin-top: 20px;
+  }
   .fileslinks {
     margin-bottom: 20px;
   }
