--- a/views/pad.erb
+++ b/views/pad.erb
@@ -13,7 +13,7 @@
         <a href="#" class="close">×</a>
         Deleting pad failed, please try again later
       </div>
-      <div class="deletePadSuccess info alert-info hide">
+      <div class="deletePadSuccess alert alert-info hide">
         <a href="#" class="close">×</a>
         Pad deleted
       </div>
