file upload now shows hover

--- a/views/create.erb
+++ b/views/create.erb
@@ -8,11 +8,11 @@
   </div>
   <div class="span6 offset1">
     <div class="row">
-      <div>
+      <div class="fileWrapper">
         <input type="file" id="filesButton" multiple>
         <input type="button" id="filesButtonOverlay" class="btn btn-info" value="Add Files to Pad">
-        <input type="button" id="securityButton"class="btn btn-info" value="More Securiry Options">
       </div>
+      <input type="button" id="securityButton"class="btn btn-info" value="More Securiry Options">
     </div>
     <div class="row">
       <div class="securityOptions hide">
