--- a/views/link.erb
+++ b/views/link.erb
@@ -4,5 +4,5 @@
 <div class="row">
   <p class="span2 offset1">Here is your link: </p>
   <p class="span8"><a href="<%= pad_link%>"><%= pad_link %></a></p>
-  <%= clippy(pad_link) %>
+  <!-- <%= clippy(pad_link) %> -->
 </div>
