--- a/views/base.erb
+++ b/views/base.erb
@@ -31,6 +31,11 @@
       })();
     </script>
     <!-- END Google analytics -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="auther" content="Noam Szpiro">
+  <meta name="description"
+      content="Share sensitive information securely with colleagues and friends">
   </head>
   <body data-twttr-rendered="true">
     <div class="navbar navbar-fixed-top">
@@ -49,11 +54,11 @@
     </div>
     <div class="container footer">
       <div class="row">
-        <div class="span1 offset4"><a href="http://www.twitter.com/hellonoam">About</a></div>
+        <div class="span2 offset4">
+          Create By:
+          <a href="http://www.twitter.com/hellonoam">Noam Szpiro</a>
+        </div>
         <div class="span1"><a href="mailto:hellonoam@gmail.com">Contact</a></div>
-        <div class="span1"><a href="#">Like</a></div>
-        <div class="span1"><a href="#">Tweet</a></div>
-        <div class="span1"><a href="#">G+</a></div>
       </div>
     </div>
 
