--- a/views/base.erb
+++ b/views/base.erb
@@ -59,7 +59,7 @@
           <a href="http://www.twitter.com/hellonoam">Noam Szpiro</a>
         </div>
         <div class="span1"><a href="mailto:hellonoam@gmail.com">Contact</a></div>
-        <div>
+        <div class="span1 feedbackLink">
           <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEJzWFhDMXhRdGtFeE1TOExoTXZtR1E6MQ#gid=0">
             Feedback
           </a>
