--- a/views/css/common.scss
+++ b/views/css/common.scss
@@ -12,6 +12,9 @@ body {
   padding-bottom: 20px;
   position: relative;
   bottom: -30px;
+  .feedbackLink {
+    margin-left: 6px;
+  }
 }
 
 .fileslinks a {
