alignment of delete this pad

--- a/views/css/pad.scss
+++ b/views/css/pad.scss
@@ -11,6 +11,9 @@
   .deletePad .alert {
     margin-top: 20px;
   }
+  .deletePad {
+    margin-left: 0px;
+  }
   .fileslinks {
     margin-bottom: 20px;
   }
