changed brand name

--- a/views/base.erb
+++ b/views/base.erb
@@ -41,7 +41,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a href="/" class="brand">CryptoPad</a>
+          <a href="/" class="brand">AliceToBob</a>
           <ul class="nav pull-right">
             <li class="divider-vertical"></li>
             <li><a data-toggle="modal" href="#signupModal">keep in touch</a></li>
