--- a/views/base.erb
+++ b/views/base.erb
@@ -55,7 +55,7 @@
     <div class="container footer">
       <div class="row">
         <div class="span2 offset4">
-          Create By:
+          Created By:
           <a href="http://www.twitter.com/hellonoam">Noam Szpiro</a>
         </div>
         <div class="span1"><a href="mailto:hellonoam@gmail.com">Contact</a></div>
