minor tweaks to created by with and blockquotes p size

--- a/views/base.erb
+++ b/views/base.erb
@@ -54,7 +54,7 @@
     </div>
     <div class="container footer">
       <div class="row">
-        <div class="span2 offset4">
+        <div class="createdBy span2 offset4">
           Created By:
           <a href="http://www.twitter.com/hellonoam">Noam Szpiro</a>
         </div>
