moved css rule to common.scss

--- a/views/css/common.scss
+++ b/views/css/common.scss
@@ -32,3 +32,7 @@ body {
 #signupModal .modal-body .row {
   margin-top: 20px;
 }
+/* a little more room for created by*/
+.footer .createdBy {
+  width: 150px;
+}
