added default checked for allow reader to destroy

--- a/views/create.erb
+++ b/views/create.erb
@@ -39,7 +39,8 @@
                   <input type="checkbox" name="neverDestroy"> Never destroy pad
                 </label>
                 <label class="checkbox">
-                  <input type="checkbox" name="allowReaderToDestroy"> Allow reader to destroy pad
+                  <input type="checkbox" checked name="allowReaderToDestroy">
+                    Allow reader to destroy pad
                 </label>
                 <label class="select">
                   Destroy after
