--- a/views/create.erb
+++ b/views/create.erb
@@ -12,7 +12,7 @@
         <input type="file" id="filesButton" multiple>
         <input type="button" id="filesButtonOverlay" class="btn btn-info" value="Add Files to Pad">
       </div>
-      <input type="button" id="securityButton"class="btn btn-info" value="More Securiry Options">
+      <input type="button" id="securityButton"class="btn btn-info" value="More Security Options">
     </div>
     <div class="row">
       <div class="securityOptions hide">
