no links for numbers on index page

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,17 +10,17 @@
     </div>
     <div class="row">
       <div class="span5">
-        <span class="badge badge-error">1</span> Create a pad and enter the text you'd like to share.
+        <span class="badge badge-error nolink">1</span> Create a pad and enter the text you'd like to share.
       </div>
     </div>
     <div class="row">
       <div class="span5">
-        <span class="badge badge-info">2</span> Choose a password and share the link with your colleague.
+        <span class="badge badge-info nolink">2</span> Choose a password and share the link with your colleague.
       </div>
     </div>
     <div class="row">
       <div class="span5">
-        <span class="badge badge-success">3</span>
+        <span class="badge badge-success nolink">3</span>
          Your colleague types the password and views the text.
       </div>
     </div>
