changed some text

--- a/views/index.erb
+++ b/views/index.erb
@@ -27,8 +27,8 @@
   </div>
 </div>
 <div class="row create">
-  <div class="span3 offset2">More options coming soon</div>
-  <a href="/create" class="span1.5 btn btn-warning">Create Pad</a>
+  <div class="span4 offset2 lead"><div>No signup needed</div><div>Share text or any type of file</div><div>Free of charge</div></div>
+  <a href="/create" class="offset1 span1.5 btn btn-warning">Get Started</a>
 </div>
 <div class="row details">
   <div class="span3 offset1">
