--- a/views/base.erb
+++ b/views/base.erb
@@ -33,7 +33,6 @@
     <!-- END Google analytics -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <meta name="auther" content="Noam Szpiro">
   <meta name="description"
       content="Share sensitive information securely with colleagues and friends">
   </head>
@@ -56,7 +55,7 @@
       <div class="row">
         <div class="createdBy span2 offset4">
           Created By:
-          <a href="http://www.twitter.com/hellonoam">Noam Szpiro</a>
+          Noam Szpiro and Snir Kodesh
         </div>
         <div class="span1"><a href="mailto:hellonoam@gmail.com">Contact</a></div>
         <div class="span1 feedbackLink">
