--- a/views/base.erb
+++ b/views/base.erb
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="createdBy span2 offset4">
           Created By:
-          <a href="http://www.twitter.com/hellonoam">Noam Szpiro</a>
+          <a href="http://www.twitter.com/hellonoam">Noam</a> & Snir
         </div>
         <div class="span1"><a href="mailto:hellonoam@gmail.com">Contact</a></div>
         <div class="span1 feedbackLink">
