--- a/views/base.erb
+++ b/views/base.erb
@@ -58,7 +58,7 @@
           Created By:
           <a href="http://www.twitter.com/hellonoam">Noam</a> & Snir
         </div>
-        <div class="span1"><a href="mailto:hellonoam@gmail.com">Contact</a></div>
+        <div class="span1"><a href="mailto:hellonoam@gmail.com,skodesh@gmail.com">Contact</a></div>
         <div class="span1 feedbackLink">
           <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEJzWFhDMXhRdGtFeE1TOExoTXZtR1E6MQ#gid=0">
             Feedback
