added link to 'Snir'

--- a/views/base.erb
+++ b/views/base.erb
@@ -56,7 +56,8 @@
       <div class="row">
         <div class="createdBy span2 offset4">
           Created By:
-          <a href="http://www.twitter.com/hellonoam">Noam</a> & Snir
+          <a href="http://www.twitter.com/hellonoam">Noam</a> &
+          <a href="http://www.linkedin.com/pub/snir-kodesh/4/b83/446">Snir</a>
         </div>
         <div class="span1"><a href="mailto:hellonoam@gmail.com,skodesh@gmail.com">Contact</a></div>
         <div class="span1 feedbackLink">
