readme updated plus link to github

--- a/views/base.erb
+++ b/views/base.erb
@@ -42,7 +42,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a href="/" class="brand">AliceToBob</a>
-          <ul class="nav pull-right">
+          <ul class="nav pull-right" id="inTouch">
             <li class="divider-vertical"></li>
             <li><a data-toggle="modal" href="#signupModal">keep in touch</a></li>
           </ul>
@@ -54,7 +54,7 @@
     </div>
     <div class="container footer">
       <div class="row">
-        <div class="createdBy span2 offset4">
+        <div class="createdBy span2 offset3">
           Created By:
           <a href="http://www.twitter.com/hellonoam">Noam</a> &
           <a href="http://www.linkedin.com/pub/snir-kodesh/4/b83/446">Snir</a>
@@ -65,6 +65,7 @@
             Feedback
           </a>
         </div>
+        <div class="span2"><a href="https://github.com/hellonoam/cryptopad">Fork us on GitHub</a></div>
       </div>
     </div>
 
