--- a/views/base.erb
+++ b/views/base.erb
@@ -33,9 +33,10 @@
     <!-- END Google analytics -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <meta name="auther" content="Noam Szpiro">
+  <meta name="auther" content="Noam Szpiro, Snir Kodesh">
   <meta name="description"
       content="Share sensitive information securely with colleagues and friends">
+  <title>AliceToBob - share data securely</title>
   </head>
   <body data-twttr-rendered="true">
     <div class="navbar navbar-fixed-top">
