--- a/views/base.erb
+++ b/views/base.erb
@@ -36,6 +36,7 @@
   <meta name="auther" content="Noam Szpiro, Snir Kodesh">
   <meta name="description"
       content="Share sensitive information securely with colleagues and friends">
+  <link rel="icon" type="image/png" href="/favicon.png">
   <title>AliceToBob - share data securely</title>
   </head>
   <body data-twttr-rendered="true">
